--- a/HackathonIndex.cshtml
+++ b/HackathonIndex.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Personal Expenses Page</title>
+    <title>Personal Expenses Page</title>
     <a href="~/lib/jquery/dist/jquery.min.map"></a>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,42 +12,53 @@
     <script>
         const url = "Expense/AllExpenses"
 
-        function createRow(expense)
-        {
-            const row= `<tr>
-                            <td>${expense.serialNo}</td>
-                            <td>${expense.amount}</td>
-                            <td>${expense.details}</td>
-                            <td>${expense.billDate}</td>
-                        </tr>`
+        function createRow(expense) {
+            const row = `<tr>
+                                            <td>${expense.serialNo}</td>
+                                            <td>${expense.amount}</td>
+                                            <td>${expense.details}</td>
+                                            <td>${expense.billDate}</td>
+                                        </tr>`
             return row
         }
-        
-        function addRecords() { 
-            const url= "Expense/AddExpense"
-            // const serialno = 
+
+        function addRecords() {
+            const url = "Expense/AddExpense"
+            // const serialno =
             const billAmount = $("#txtNewAmount").val()
             const detail = $("#txtNewDetail").val()
             const date = $("#txtNewDate").val()
-            let expense = {"amount" : billAmount, "details" : detail, "billDate" : date}
+            let expense = { "amount": billAmount, "details": detail, "billDate": date }
             $.post(url, expense, (res) => {
                 alert("Expense Record Added Successfully!")
             })
 
         }
 
-        function onGetRecords(result){
+        function findByDetails() {
+            const title = $("#txtSearchByDetails").val()
+            const findUrl = `Expense/FindByDetails?title=${title}`
+            $.get(findUrl, onGetRecords)
+        }
+        
+        function findByDate() {
+            const date = $("#txtSearchByDate").val()
+            const findUrl = `Expense/FindByDate?date=${date}`
+            $.get(findUrl, onGetRecords)
+        }
+
+        function onGetRecords(result) {
             $("table tbody tr").remove()
-            $.each(result, function (index, value) { 
+            $.each(result, function (index, value) {
                 const row = createRow(value)
                 $("table tbody").append(row)
             })
         }
-        function displayRecords() { 
+        function displayRecords() {
             $.get(url, onGetRecords)
         }
 
-        function init() { 
+        function init() {
             $("#btnDisplay").click(displayRecords)
             $("#btnAdd").click(addRecords)
             $("#btnFindByDate").click(findByDate)
@@ -56,50 +67,51 @@
         }
         $(document).ready(init)
     </script>
-    </head>
-    <body>
-        <nav class="navbar bg-dark">
-            <button class="btn btn-primary m-4" id="btnDisplay">Display Expense Records</button>
-        <button class="btn btn-info m-4" id="btnAdd" >Add Expenses</button>
-            <button class="btn btn-success m-4" id="btnFindByDate">Find Expenses By Bill Date</button>
-            <button class="btn btn-info m-4" id="btnFindByDetails">Find Expenses By Details</button>
-            <button class="btn btn-success m-4" id="btnFindByMonth">Find Expenses By Month</button>
-        </nav>
-        <h1>Personal Expenses</h1>
-        <hr>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-11">
-                    <table class="table table-bordered table-striped">
-                        <thead>
-                            <tr>
+</head>
+<body>
+    <nav class="navbar bg-dark">
+        <button class="btn btn-primary m-4" id="btnDisplay">Display Expense Records</button>
+        <button class="btn btn-info m-4" id="btnAdd">Add Expenses</button>
+        <button class="btn btn-success m-4" id="btnFindByDate">Find Expenses By Bill Date</button>
+        <button class="btn btn-info m-4" id="btnFindByDetails">Find Expenses By Details</button>
+        <button class="btn btn-success m-4" id="btnFindByMonth">Find Expenses By Month</button>
+    </nav>
+    <h1>Personal Expenses</h1>
+    <hr>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-11">
+                <input type="search" id="txtSearchByDetails" placeholder="Search by Details" class="form-control" onchange="findByDetails()" />
+                <input type="search" id="txtSearchByDate" placeholder="Search by BillDate" class="form-control" onchange="findByDate()" />
+                <table class="table table-bordered table-striped bg-gradient">
+                    <thead>
+                        <tr>
                             <th>Serial No</th>
                             <th>Bill Amount</th>
                             <th>Bill Details</th>
                             <th>Bill Date</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="row" id="divAdd">
-                <div class="col-md-11">
-                    <p>
-                        <h1>New Expense Registration</h1>
-                        <hr />
-                    </p>
-                    <section>
-                        <input type="number" hidden id="txtSerialNo" placeholder="Serial No: " class="form-control" />
-                        <input type="text" id="txtNewAmount" placeholder="Enter the New Bill Amount: " class="form-control" />
-                        <input type="text" id="txtNewDetail" placeholder="Enter the Expense Details: " class="form-control" />
-                        <input type="datetime" id="txtNewDate" placeholder="Enter the Expense BillDate: " class="form-control" />
-                        <input type="submit" onclick="addRecords()" />
-                    </section>
-                </div>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
             </div>
         </div>
-    </body>
-    </html>
+        <div class="row" id="divAdd">
+            <div class="col-md-11">
+                <p>
+                    <h1>New Expense Registration</h1>
+                    <hr />
+                </p>
+                <section class="form-control">
+                    <input type="number" hidden id="txtSerialNo" placeholder="Serial No: " class="form-control" />
+                    <input type="text" id="txtNewAmount" placeholder="Enter the New Bill Amount: " class="form-control" />
+                    <input type="text" id="txtNewDetail" placeholder="Enter the Expense Details: " class="form-control" />
+                    <input type="datetime" id="txtNewDate" placeholder="Enter the Expense BillDate: " class="form-control" />
+                    <input type="submit" onclick="addRecords()" />
+                </section>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
